# MarchMadnessPicker

./: .clang-format  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md
.github/: constants.env
.github/actions/setup_cache/: action.yml
.github/workflows/: ci.yml  codeql-analysis.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/MarchMadnessPicker/: sample_library.hpp
kenpom-scraper/: CMakeLists.txt  html_parse.py  http_request.py  json_writer.py  kenpom_data.py  kenpom_scraper.py
sample-inputs/: input.json  kenpom-data-pre-tournament-2024.json
src-picker/: Bracket.cpp  Bracket.hpp  BracketData.cpp  BracketData.hpp  CMakeLists.txt  CommandLineParser.hpp  CommandLineParser_CLI.cpp  CommandLineParser_CLI.hpp  Constants.hpp  GenericFactory.hpp  LogManager.cpp  LogManager.hpp  Logger.hpp  Logger_Spdlog.cpp  Logger_Spdlog.hpp  OutputStrategy.hpp  OutputStrategy_Factory.cpp  OutputStrategy_Factory.hpp  OutputStrategy_FileOut.cpp  OutputStrategy_FileOut.hpp  OutputStrategy_OStream.cpp  OutputStrategy_OStream.hpp  OutputStrategy_StdOut.cpp  OutputStrategy_StdOut.hpp  PickerConfig.hpp.in  Problem.cpp  Problem.hpp  ProblemData.cpp  ProblemData.hpp  RandomizationStrategy.hpp  RandomizationStrategy_Factory.cpp  RandomizationStrategy_Factory.hpp  RandomizationStrategy_MersenneTwister.cpp  RandomizationStrategy_MersenneTwister.hpp  RandomizationStrategy_MinStdRand.cpp  RandomizationStrategy_MinStdRand.hpp  RandomizationStrategy_StdRand.cpp  RandomizationStrategy_StdRand.hpp  SelectionStrategy.hpp  SelectionStrategy_CoinFlip.cpp  (+10 more)
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
test/kenpom-scraper/: CMakeLists.txt  test_html_parse.py  test_http_request.py  test_json_writer.py
test/picker/: BracketDataTest.cpp  BracketTest.cpp  CMakeLists.txt  CommandLineParserTest.cpp  LoggingTest.cpp  OutputStrategyFactoryTest.cpp  OutputStrategyTest.cpp  ProblemDataTest.cpp  ProblemTest.cpp  RandomizationStrategyFactoryTest.cpp  RandomizationStrategyTest.cpp  SelectionStrategyFactoryTest.cpp  SelectionStrategyTest.cpp  TeamDataTest.cpp  TestUtils.cpp  TestUtils.hpp  test-input.json  test-team-data.json
